--- a/Used_Car_Prediction.ipynb
+++ b/Used_Car_Prediction.ipynb
@@ -2156,41 +2156,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "aaa5950c-c9d5-42df-8549-86c1744fa0d8",
+   "execution_count": null,
+   "id": "92c800c4-5887-4eed-a4d1-a727bab60eb3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "price\n",
-       "15000    649\n",
-       "12000    495\n",
-       "30000    448\n",
-       "8500     424\n",
-       "17500    420\n",
-       "        ... \n",
-       "38998      1\n",
-       "23739      1\n",
-       "28298      1\n",
-       "43389      1\n",
-       "37998      1\n",
-       "Name: count, Length: 1481, dtype: int64"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "new_data[\"price\"].value_counts("
+    "# Separate the combined dataframe back into training and test sets\n",
+    "df_train_processed = new_df[df_combined['price'].notna()].reset_index(drop=True)\n",
+    "df_test_processed = new_df[df_combined['price'].isna()].reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92c800c4-5887-4eed-a4d1-a727bab60eb3",
+   "id": "723dac9c-cc29-43b1-9bb0-3656c160ca47",
    "metadata": {},
    "outputs": [],
    "source": []
